--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "linkedin": "linkedin"
   },
   "jump": "jumping",
-  "version": "4ukkh9q2y",
+  "version": "c1f9885",
   "email": "gabemacru@gmail.com",
   "ps1_hostname": "kali",
   "ps1_username": "root",
